--- a/project1final/pom.xml
+++ b/project1final/pom.xml
@@ -7,6 +7,10 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>project1final Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+<build>
+        <finalName>${project.artifactId}</finalName>
+   </build>
  <dependencies>
     
     <dependency>
